--- a/dashboard.css
+++ b/dashboard.css
@@ -2,48 +2,56 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Arial, sans-serif;
+  list-style: none;
+  text-decoration: none;
+}
+body {
+  background-color: #f7f7f7;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
-body {
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-  background-color: #f7f7f7;
+.hidden {
+  display: none;
 }
 
 .container {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 0 0;
   padding: 20px;
+  flex: 1;
 }
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  background: linear-gradient(to right, rgb(89, 85, 85), rgb(143, 140, 140));
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
 .logo {
   font-size: 24px;
   font-weight: bold;
   color: #333;
+  margin-left: 20px;
 }
-
-.logout-btn {
+header {
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+  padding: 20px;
+  width: 100vw;
+  background: linear-gradient(to right, rgb(89, 85, 85), rgb(143, 140, 140));
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+/* .logout-btn {
   text-decoration: none;
   color: #fff;
   padding: 8px 15px;
   border-radius: 5px;
   background-color: #ff8c00;
   transition: background-color 0.3s, color 0.3s;
-}
+} */
 
-.logout-btn:hover {
+/* .logout-btn:hover {
   background-color: #ff9933;
-}
+} */
 
 main {
   padding: 20px;
@@ -107,10 +115,10 @@ footer {
   color: black;
   font-weight: 600;
   font-size: 22px;
+  width: 100vw;
   padding: 10px 20px;
   text-align: center;
   border-radius: 10px;
-  margin-top: 20px;
 }
 
 .footer-content {
