--- a/dashboard.css
+++ b/dashboard.css
@@ -15,13 +15,15 @@ body {
   scroll-behavior: smooth;
 }
 
-.hidden {
+/* .hidden {
   display: none;
-}
+} */
 
 .container {
+  display: flex;
+  justify-content: space-between;
   max-width: 1200px;
-  margin: 0 0;
+  margin: 20px 20px;
   padding: 20px;
   flex: 1;
 }
@@ -201,6 +203,35 @@ button {
 
 button:hover {
   background-color: #ff9933;
+}
+/* Style for the table */
+.table {
+  width: 50%;
+  border-collapse: separate;
+  margin-top: 20px;
+}
+
+/* Style for table header */
+.table th {
+  background-color: rgb(128, 125, 125);
+  padding: 12px 8px;
+  text-align: left;
+}
+
+/* Style for table rows */
+.table td {
+  padding: 8px;
+  border: 1px solid #ddd;
+}
+
+/* Alternate row background color */
+.table tr:nth-child(even) {
+  background-color: rgb(255, 153, 51);
+}
+
+/* Hover effect on table rows */
+.table tr:hover {
+  background-color: #f2f2f2;
 }
 
 footer {
