--- a/dashboard.css
+++ b/dashboard.css
@@ -20,8 +20,8 @@ body {
 } */
 
 .container {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   max-width: 1200px;
   margin: 20px 20px;
   padding: 20px;
